feat: Fizyoterapist kendi hastasini ekleyebilmesi icin endpoint ve servisler yazildi
Degisiklikler:
- Yeni hasta eklendiginde rastgele sifre ureten algoritma eklendi
- EmailService'e ailelere giris bilgilerini ileten metod eklendi
- /api/fizyo/add-patient endpointi yazildi